# machinelearning

./: .gitignore  CMakeLists.txt  run.sh
src/: AbaloneData.h  BalanceData.h  BreastCancerData.h  IrisData.h  LetterData.h  MLCoursework.h  Main.c  SeedsData.h  TrainAndTest.c  TrainAndTest.h
